# msfconsole-mcp

./: .coverage  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  config.py  coverage.xml  dev-requirements.txt  improved_msf_parser.py  mcp_server_stable.py  msf_advanced_tools.py  msf_ecosystem_tools.py  msf_extended_tools.py  msf_final_five_tools.py  msf_parser.py  msf_stable_integration.py  msfconsole_mcp.py  msfconsole_mcp_enhanced.py  pyproject.toml  pytest.ini  safe_context.py
.github/workflows/: ci.yml
msf/: __init__.py  core.py  parsing.py  policy.py  rpc_client.py  security_utils.py  server.py  tools_advanced.py  tools_ecosystem.py  tools_extended.py  tools_final.py
msfmcp/: __init__.py  msf_advanced_tools.py  msf_ecosystem_tools.py  msf_extended_tools.py  msf_final_five_tools.py
msfmcp/tools/: msf_advanced_tools.py  msf_ecosystem_tools.py  msf_extended_tools.py  msf_final_five_tools.py
servers/: mcp_server_stable.py  msfconsole_mcp_enhanced.py
