[project]
name = "msf-mcp-server"
version = "0.1.0"
description = "Metasploit Framework MCP Server: organized tools and parsing with CI and tests"
authors = [{ name = "Team", email = "team@example.com" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["metasploit", "mcp", "security", "red-team"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
]

[tool.coverage.run]
branch = false
source = ["."]
omit = [
  "**/tests/*",
  "**/.venv/*",
  "**/.pytest_cache/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 100
exclude_also = [
  "if TYPE_CHECKING:",
  "pragma: no cover",
]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100